--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "strapi develop",
-    "start": "strapi start",
-    "build": "strapi build",
-    "strapi": "strapi"
+    "develop": "yarn develop",
+    "start": "yarn start",
+    "build": "yarn build",
+    "strapi": "yarn"
   },
   "devDependencies": {},
   "dependencies": {
